# rust-smallest-enclosing-circle

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: cargo-publish.yml
.github/workflows/: cargo-publish.yml  cargo-test.yml
demo/: Cargo.toml  Dioxus.toml  README.md
demo/assets/: favicon.ico.br  main.css  main.css.br
demo/src/: main.rs
demo/src/components/: mod.rs  smallest_enclosing_circle_demo.rs
src/: algorithm.rs  circle.rs  circumcircle.rs  geometry.rs  incircle.rs  lib.rs  num.rs  orient2d.rs  point.rs  predicates.rs  smallest_enclosing_circle.rs
src/geometry/: circumcircle.rs  point.rs
src/predicates/: in_circle.rs  orientation.rs
