[package]
name = "smallest-enclosing-circle"
description = "Iterative and recursive two-dimensional implementations of Welzl's algorithm for computing the smallest enclosing circle."
license = "MIT"
repository = "https://github.com/wakefullynx/rust-smallest-enclosing-circle"

version = "0.2.0"
edition = "2021"

[dependencies]
geometry-predicates = "0.3.0"