[package]
name = "smallest-enclosing-circle"
description = "Iterative two-dimensional implementations of Welzl's algorithm for computing the smallest enclosing circle."
license = "MIT"
repository = "https://github.com/wakefullynx/rust-smallest-enclosing-circle"
homepage = "https://wakefullynx.dev/smallest-enclosing-circle-demo/"
keywords = ["geometry", "enclosing-circle"]
categories = ["mathematics", "graphics"]

version = "0.3.0"
edition = "2021"

exclude = ["/img"]

[dependencies]
geometry-predicates = "0.3.0"
num = "0.4.3"

[dev-dependencies]
paste = "1.0.15"
itertools = "0.14.0"
