[package]
name = "demo"
version = "0.1.0"
authors = ["wakefullynx <mail@wakefullynx.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }
smallest-enclosing-circle = { path = "../" }
dioxus-free-icons = { version = "0.8", features = ["bootstrap"] }

# Debug
dioxus-logger = "0.5.1"
